2016-11-10  Bruno Haible  <bruno@clisp.org>

	Support for memory models with oint_data_len >= 55.
	* dfloat.d (RA_to_DF): Add code for oint_data_len >= 55.

2016-11-09  Bruno Haible  <bruno@clisp.org>

	Fix compilation error of OBJECT_STRUCT mode with g++ versions < 4.7.
	Fixes a regression introduced on 2016-08-28.
	* lispbibl.d (designated_init): New macro.
	(as_object, INIT_ALLOCSTAMP, gcv_object_t::operator object(), as_chart):
	Use it.

2016-11-09  Bruno Haible  <bruno@clisp.org>

	Fix g++ warnings of type -Wc++0x-compat.
	* eval.d (augment_decl_env): Rename local variable 'decltype'.
	* control.d (PROCLAIM): Likewise.

2016-11-09  Bruno Haible  <bruno@clisp.org>

	Fix gcc warning of type -Wformat.
	* spvw.d (init_subr_tab_1): Cast fprintf argument to 'int'.

2016-11-09  Bruno Haible  <bruno@clisp.org>

	Fix gcc warnings of type -Wparentheses.
	* spvw_language.d (init_language): Put braces.
	* charstrg.d (nstring_invertcase, nstring_upcase, nstring_downcase):
	Likewise.
	* pathname.d (directory_search_scandir): Likewise.
	(init_launch_streamarg): Simplify boolean expression.
	* intelem.d, flo_rest.d: Use #pragma GCC diagnostic.

2016-11-09  Bruno Haible  <bruno@clisp.org>

	Fix a relevant gcc warning of type -Wclobbered.
	* pathname.d (direntry_to_string): Use 'volatile' to disallow a
	dangerous compiler optimization.

2016-11-09  Bruno Haible  <bruno@clisp.org>

	Fix compilation error introduced on 2007-11-26.
	* spvw_allocate.d (error_speicher_voll): Rename to
	error_memory_exhausted and handle_memory_exhausted, respectively.

2016-09-04  Sam Steingold  <sds@gnu.org>

	* utils/fix-perms.sh (root): replace obsolete "-perm +111" with
	"-perm /111" and .cvsignore with .hgignore

2016-08-29  Sam Steingold  <sds@gnu.org>

	* lispbibl.d, built.d, spvw.d, spvw_garcol.d, spvw_garcol_old.d:
	* spvw_mark.d: remove the obsolete object representation WIDE_AUXI

2016-08-29  Sam Steingold  <sds@gnu.org>

	* utils/modprep.lisp (modprep): bind *module-name*, *module-line*,